updated the script file

--- a/singlescript.html
+++ b/singlescript.html
@@ -16,7 +16,7 @@
       <div class="bot-container" style="display: none">
         <header>
           <div class="title-bar">
-            <img src="https://aibotfiles.vercel.app/logo.jpeg" class="logo" />
+            <img src="https://aibotfiles.vercel.app/bot.png" class="logo" />
             <h1 class="company-name">Jellyfish Technologies</h1>
           </div>
           <div class="action">
@@ -33,11 +33,10 @@
         </header>
         <section>
           <div class="initial-greetings">
-            <img
-              src="https://aibotfiles.vercel.app/logo.png"
-              className="size-6"
-            />
-            <span class="initial-message"></span>
+            <img src="https://aibotfiles.vercel.app/bot.png" />
+            <span class="initial-message"
+              >Welcome! I'm Jelly, How can I assist you today?</span
+            >
           </div>
           <div class="static-questions"></div>
         </section>
@@ -54,6 +53,7 @@
               <img src="https://aibotfiles.vercel.app/send-message.png" />
             </button>
           </form>
+          <div><span>&copy;</span> Powered by Jellyfish Technologies</div>
         </footer>
       </div>
       <button class="bot-button" title="Jelly">
