updated the script section

--- a/singlescript.html
+++ b/singlescript.html
@@ -3,63 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jellyfish Technologies</title>
-    <link rel="stylesheet" href="https://aibotfiles.vercel.app/style.css" />
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="https://aibotfiles.vercel.app/logo.png"
-    />
   </head>
   <body>
-    <div class="container">
-      <div class="bot-container" style="display: none">
-        <header>
-          <div class="title-bar">
-            <img src="https://aibotfiles.vercel.app/bot.png" class="logo" />
-            <h1 class="company-name">Jellyfish Technologies</h1>
-          </div>
-          <div class="action">
-            <button id="up-arrow" title="Go to top">
-              <img src="https://aibotfiles.vercel.app/uparrow.png" />
-            </button>
-            <button id="minimize" title="Minimize">
-              <img src="https://aibotfiles.vercel.app/minus.png" />
-            </button>
-            <button id="clear" title="Clear chat">
-              <img src="https://aibotfiles.vercel.app/delete.png" />
-            </button>
-          </div>
-        </header>
-        <section>
-          <div class="initial-greetings">
-            <img src="https://aibotfiles.vercel.app/bot.png" />
-            <span class="initial-message"
-              >Welcome! I'm Jelly, How can I assist you today?</span
-            >
-          </div>
-          <div class="static-questions"></div>
-        </section>
-        <hr />
-        <footer>
-          <form id="query-form" autocomplete="off">
-            <input
-              type="text"
-              placeholder="Type your message here.."
-              id="query"
-            />
-            <input type="hidden" id="api-key" value="YOUR_API_KEY_HERE" />
-            <button type="submit" title="Send message">
-              <img src="https://aibotfiles.vercel.app/send-message.png" />
-            </button>
-          </form>
-          <div><span>&copy;</span> Powered by Jellyfish Technologies</div>
-        </footer>
-      </div>
-      <button class="bot-button" title="Jelly">
-        <img src="https://aibotfiles.vercel.app/bot.png" />
-      </button>
-    </div>
-    <script src="https://aibotfiles.vercel.app/script.js"></script>
+    <h1>Hello</h1>
+    <script
+      id="ai-jellyfishbot"
+      src="https://aibotfiles.vercel.app/script.js"
+      defer
+    >
+      3a951826-f274-4873-bb50-bc660f33d843,Jellyfish technologies,Jelly
+    </script>
   </body>
 </html>
