updated readme and made docekr dynamic

--- a/Chatbotquery/index.html
+++ b/Chatbotquery/index.html
@@ -14,7 +14,7 @@
       defer
     >
 
-      b5156c84-a1e7-4ad2-b483-926d4a3d8407,53c25460-60ef-4c61-89c1-9bf8941b7619,Very Smart Ai,Smarty
+      04afb353-2092-4c23-a903-9824ef18fb82,52ea40fb-8013-4948-96d3-c314930fb7b6,Rajnigandha,Rajni
     </script>
 
     <script type="module" src="/src/main.jsx"></script>
