--- a/Chatbotquery/index.html
+++ b/Chatbotquery/index.html
@@ -14,7 +14,7 @@
       defer
     >
 
-      04afb353-2092-4c23-a903-9824ef18fb82,52ea40fb-8013-4948-96d3-c314930fb7b6,Rajnigandha,Rajni
+      13cd791d-f221-41fa-9001-0b2abb4d0275,718b74a7-5d51-4885-b069-f6b7215fb285,Verysmart Ai,Smarty
     </script>
 
     <script type="module" src="/src/main.jsx"></script>
