--- a/Chatbotquery/index.html
+++ b/Chatbotquery/index.html
@@ -14,7 +14,7 @@
       defer
     >
 
-      13cd791d-f221-41fa-9001-0b2abb4d0275,718b74a7-5d51-4885-b069-f6b7215fb285,Verysmart Ai,Smarty
+      d96da251-ed9d-4533-ac59-4a8f89d99b5a,94940769-cf66-491f-98eb-d33e70fc725d,VerySmart AI,Smarty
     </script>
 
     <script type="module" src="/src/main.jsx"></script>
