--- a/Chatbotquery/index.html
+++ b/Chatbotquery/index.html
@@ -14,9 +14,7 @@
       defer
     >
 
-      d96da251-ed9d-4533-ac59-4a8f89d99b5a,94940769-cf66-491f-98eb-d33e70fc725d,VerySmart AI,Smarty
+      2775b0ba-3880-4ab6-98aa-c42cd3c3375a,025d9abb-d7a4-419c-9ca1-96676bd63f95,VerySmart,Smartie
     </script>
-
-    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
