--- a/Chatbotquery/index.html
+++ b/Chatbotquery/index.html
@@ -14,7 +14,7 @@
       defer
     >
 
-      2775b0ba-3880-4ab6-98aa-c42cd3c3375a,025d9abb-d7a4-419c-9ca1-96676bd63f95,VerySmart,Smartie
+      5574c382-030d-49be-9a22-f963e800d792,d8cefc6d-30a3-4722-b9bc-5cf17be839fc,JellyfishTechnologies,Jelly
     </script>
   </body>
 </html>
