index file for query

--- a/Chatbotquery/index.html
+++ b/Chatbotquery/index.html
@@ -12,9 +12,10 @@
       id="ai-jellyfishbot"
       src="https://aibotfiles.vercel.app/script.js"
       defer
-    >
-
-      c0e1327a-b96e-4b13-a13a-a353b06474f0,d8cefc6d-30a3-4722-b9bc-5cf17be839fc,JellyfishTechnologies,Jelly
-    </script>
+      data-api-key="f25bbff2-6219-4256-94d4-b2c1ed4efac0"
+      data-bot-id="0c33c7d0-823d-46bc-baff-35320ebe17de"
+      data-company-name="Book A Limo"
+      data-bot-name="Limony"
+    ></script>
   </body>
 </html>
