--- a/Chatbotquery/index.html
+++ b/Chatbotquery/index.html
@@ -12,9 +12,10 @@
       id="ai-jellyfishbot"
       src="https://aibotfiles.vercel.app/script.js"
       defer
-    >
-
-      c0e1327a-b96e-4b13-a13a-a353b06474f0,d8cefc6d-30a3-4722-b9bc-5cf17be839fc,JellyfishTechnologies,Jelly
-    </script>
+      data-api-key="ehrwffh65dgsrt46564"
+      data-bot-id="adfbb2cc-55cb-4c67-b0aa-583acfa5bb2d"
+      data-company-name="Inventive"
+      data-bot-name="Jelly"
+    ></script>
   </body>
 </html>
