--- a/Chatbotquery/index.html
+++ b/Chatbotquery/index.html
@@ -12,10 +12,10 @@
       id="ai-jellyfishbot"
       src="https://aibotfiles.vercel.app/script.js"
       defer
-      data-api-key="ehrwffh65dgsrt46564"
-      data-bot-id="adfbb2cc-55cb-4c67-b0aa-583acfa5bb2d"
-      data-company-name="Inventive"
-      data-bot-name="Jelly"
+      data-api-key="0fa2c95e-a113-4366-9fad-d1583ab6f4b1"
+      data-bot-id="91132770-c1d2-47a2-a417-48c1d25ae2f7"
+      data-company-name="Vistara"
+      data-bot-name="Visty"
     ></script>
   </body>
 </html>
